# hello-lambda

./: .gitignore  .terraform.lock.hcl  Makefile  README.md  main.tf  outputs.tf  pyproject.toml  set_api_key.sh.example  terraform.tfvars.example  variables.tf
hello/: index.py
modules/api_gateway/: main.tf  outputs.tf  variables.tf
modules/lambda/: main.tf  outputs.tf  variables.tf
tests/: test_hello.py
