[tool.poetry]
name = "helloAPI"
version = "0.1.0"
description = "Boilerplate API"
authors = ["csabagyorfi <csaba@madetech.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
